exports[`reducers > project should handle default state 1`] = `
Object {
  "currentProject": null,
  "projects": Array [],
  "projectsById": Object {},
}
`;

exports[`reducers > project should handle delete project 1`] = `
Object {
  "currentProject": null,
  "projects": Array [],
  "projectsById": Object {},
}
`;

exports[`reducers > project should handle set all projects 1`] = `
Object {
  "currentProject": null,
  "projects": Array [
    Object {
      "id": "a",
    },
  ],
  "projectsById": Object {
    "a": Object {
      "id": "a",
    },
  },
}
`;

exports[`reducers > project should handle set project 1`] = `
Object {
  "currentProject": Object {
    "id": "a",
  },
  "projects": Array [
    Object {
      "id": "a",
    },
  ],
  "projectsById": Object {
    "a": Object {
      "id": "a",
    },
  },
}
`;
